[gd_scene load_steps=8 format=3 uid="uid://dyy7lp07carkr"]

[ext_resource type="Script" path="res://scenes/paddle/scripts/paddle.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bf0hn220saeh8" path="res://scenes/paddle/laser.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://blae5o6klukpa" path="res://scenes/paddle/visuals/Paddle.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(152, 34)

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paddle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 4)]
}

[sub_resource type="Animation" id="2"]
resource_name = "bump"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Paddle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, -10.639), Vector2(0, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cnhir"]
_data = {
"RESET": SubResource("3"),
"bump": SubResource("2")
}

[node name="Paddle" type="CharacterBody2D" groups=["Paddle"]]
process_priority = -2
script = ExtResource("1")
speed = 850.0
dash_speed = 2500.0

[node name="Laser" parent="." instance=ExtResource("2")]

[node name="Paddle" type="Sprite2D" parent="."]
modulate = Color(0.0980392, 0.0980392, 0.0980392, 1)
position = Vector2(0, 4)
texture = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="LaunchPoint" type="Marker2D" parent="."]
position = Vector2(0, -37)

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cnhir")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
